# mtnmt

./: CMakeLists.txt  README.md  pyproject.toml
data/: sample_state.vtk
src/: main.py  material_model.c  meta_learning.py
src/mtnmt/: __init__.py  bindings.cpp  main.py  meta_learning.py  setup.py
src/mtnmt/paraview/: __init__.py  pv_script.py  pv_visualize.py
src/mtntm/: __init__.py  bindings.cpp  main.py  material_model.c  meta_learning.py
src/mtntm/paraview/: __init__.py  pv_visualize.py
src/paraview/: pv_visualize.py
tests/: test_mata.py
