[project]
name = "mtnmt"
version = "0.1.0"
description = "Graphene-polymer-liquid-crystal + meta-learning prototype"
authors = [{name="Peter"}]
requires-python = ">=3.10,<3.11"

[project.dependencies]
numpy = "*"
vtk = "*"
pybind11 = {optional = true}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
